--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,16 @@ header h1{
   background-color: rgba(0, 0, 255, 0.3);
   
 }
+section h2{
 
+  color:  white;
+  padding: 20px;
+  font-size: 50px;
+ 
+  background-color: #0000ff;
+  background-color: rgba(0, 0, 255, 0.3);
+  
+}
 nav ul {
   display: flex;
   list-style-type: none;
@@ -76,4 +85,9 @@ main p {
 main p::first-letter {
   color:#003eb3 ;
   font-weight: bold;
+}
+section ul{
+  font-size: 1.5rem;
+  margin: 2em 0;
+  
 }
