--- a/techable3/XCopy.css
+++ b/techable3/XCopy.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     padding: 0;
@@ -20,29 +19,21 @@ body {
     flex: 1;
     padding: 40px;
 }
-.banner {
-    
-    max-height: 120px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   
+.x-logo {
+    font-size: 48px;
+    margin-bottom: 40px;
 }
-
 .heading {
-    align-items: center;
     font-size: 64px;
     margin-bottom: 32px;
 }
 .login-buttons {
-  
     display: flex;
     flex-direction: column;
     gap: 20px;
-   
+    max-width: 300px;
 }
 .button {
-    
     padding: 10px;
     border-radius: 20px;
     text-align: center;
