--- a/techable3/XCopyFirstTry/XCopy.css
+++ b/techable3/XCopyFirstTry/XCopy.css
@@ -5,12 +5,14 @@ body {
     background-color: black;
     color: white;
 }
-.container {
+.cstm-container{
     display: flex;
-    min-height: 100vh;
+  
+    margin-right: 20px;
 }
-.left-side {
-    flex: 1;
+.left-side{
+   padding: 20px;
+   margin: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,13 +24,21 @@ body {
 }
 .x-logo {
     font-size: 48px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 .heading {
-   font-size: 32px;
+   font-size: 45px;
     margin-bottom: 12px;
 }
 .login-buttons {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 300px;
+}
+.createAccount-buttons{
     margin-top: 30px;
     display: flex;
     flex-direction: column;
@@ -54,6 +64,7 @@ body {
     margin-top: 5px;
     margin-bottom: 20px;
     color: rgb(83, 100, 113);
+    max-width: 300px;
 }
 .button login {
     padding: 10px;
@@ -61,4 +72,26 @@ body {
     text-align: center;
     cursor: pointer;
     max-width: 300px;
+}
+.login-box{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 300px;
+}
+footer {
+    position:fixed;
+   
+}
+
+nav ul {
+    list-style: none;
+}
+
+
+
+nav ul li:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
